# abrar_squirro_challenge

./: .gitignore  Makefile  README.md  input.json  main.py  output.json  pyproject.toml  requirements.txt  test.py  test.sh
